# The-WuBor-Patch

./: .gitignore  404.html  Cargo.toml  README.md  Xargo.toml  aarch64-skyline-switch.json  converter.py  index.html  mass_converter.py  port.py  print.html  searchindex.js  searchindex.json  stages.html  toc.html  toc.js
WuBor-Utils/: Cargo.toml
WuBor-Utils/src/: app.rs  cancels.rs  controls.rs  lib.rs  table_const.rs  vars.rs  wua_bind.rs
custom-cancel/: Cargo.toml
custom-cancel/src/: lib.rs
custom-status/: Cargo.toml
custom-status/src/: lib.rs
fighters/: Cargo.toml
fighters/bayonetta/: Cargo.toml
fighters/bayonetta/src/: acmd.rs  agent_init.rs  fgc.rs  frame.rs  lib.rs  status.rs
fighters/belmont/: Cargo.toml
fighters/belmont/src/: agent_init.rs  lib.rs  status.rs
fighters/brave/: Cargo.toml
fighters/brave/src/: acmd.rs  agent_init.rs  frame.rs  lib.rs  status.rs
fighters/buddy/: Cargo.toml
fighters/buddy/src/: acmd.rs  frame.rs  lib.rs
fighters/captain/: Cargo.toml
fighters/captain/src/: acmd.rs  frame.rs  lib.rs  status.rs
fighters/chrom/: Cargo.toml
fighters/chrom/src/: acmd.rs  lib.rs  status.rs
fighters/cloud/: Cargo.toml
fighters/cloud/src/: acmd.rs  lib.rs
fighters/common/: Cargo.toml
fighters/common/src/: agent_inits.rs  effect.rs  frame.rs  lib.rs  param.rs  status.rs
fighters/daisy/: Cargo.toml
fighters/daisy/src/: acmd.rs  agent_init.rs  frame.rs  lib.rs  status.rs
fighters/dedede/: Cargo.toml
fighters/dedede/src/: acmd.rs  frame.rs  lib.rs
fighters/demon/: Cargo.toml
fighters/demon/src/: acmd.rs  agent_init.rs  frame.rs  helper.rs  lib.rs  status.rs
fighters/diddy/: Cargo.toml
fighters/diddy/src/: acmd.rs  lib.rs
fighters/dolly/: Cargo.toml
fighters/dolly/src/: acmd.rs  agent_init.rs  frame.rs  helper.rs  lib.rs  status.rs
fighters/donkey/: Cargo.toml
fighters/donkey/src/: acmd.rs  lib.rs  status.rs
fighters/duckhunt/: Cargo.toml
fighters/duckhunt/src/: lib.rs  status.rs
fighters/edge/: Cargo.toml
fighters/edge/src/: acmd.rs  agent_init.rs  lib.rs  status.rs
fighters/eflame/: Cargo.toml
fighters/eflame/src/: agent_init.rs  fgc.rs  lib.rs  status.rs
fighters/element/: Cargo.toml
fighters/element/src/: lib.rs  status.rs
fighters/elight/: Cargo.toml
fighters/elight/src/: agent_init.rs  frame.rs  lib.rs  status.rs
fighters/falco/: Cargo.toml
fighters/falco/src/: acmd.rs  lib.rs  status.rs
fighters/fox/: Cargo.toml
fighters/fox/src/: acmd.rs  lib.rs  status.rs
fighters/gamewatch/: Cargo.toml
fighters/gamewatch/src/: acmd.rs  lib.rs  status.rs
fighters/ganon/: Cargo.toml
fighters/ganon/src/: acmd.rs  agent_init.rs  frame.rs  helper.rs  lib.rs  status.rs
fighters/gaogaen/: Cargo.toml
fighters/gaogaen/src/: acmd.rs  agent_init.rs  frame.rs  lib.rs  status.rs
fighters/gekkouga/: Cargo.toml
fighters/gekkouga/src/: acmd.rs  frame.rs  lib.rs  status.rs
fighters/iceclimber/: Cargo.toml
fighters/iceclimber/src/: acmd.rs  lib.rs
fighters/ike/: Cargo.toml
fighters/ike/src/: acmd.rs  agent_init.rs  lib.rs  status.rs  vl.rs
fighters/inkling/: Cargo.toml
fighters/inkling/src/: acmd.rs  fgc.rs  helper.rs  lib.rs  status.rs
fighters/jack/: Cargo.toml
fighters/jack/src/: acmd.rs  agent_init.rs  fgc.rs  frame.rs  lib.rs  status.rs
fighters/kamui/: Cargo.toml
fighters/kamui/src/: agent_init.rs  frame.rs  lib.rs  status.rs
fighters/ken/: Cargo.toml
fighters/ken/src/: acmd.rs  agent_init.rs  lib.rs  status.rs
fighters/kirby/: Cargo.toml
fighters/kirby/src/: acmd.rs  agent_init.rs  frame.rs  lib.rs  status.rs  vl.rs
fighters/koopa/: Cargo.toml
fighters/koopa/src/: acmd.rs  lib.rs  status.rs
fighters/koopajr/: Cargo.toml
fighters/koopajr/src/: acmd.rs  frame.rs  lib.rs  status.rs
fighters/krool/: Cargo.toml
fighters/krool/src/: acmd.rs  frame.rs  lib.rs  status.rs
fighters/link/: Cargo.toml
fighters/link/src/: lib.rs
fighters/littlemac/: Cargo.toml
fighters/littlemac/src/: acmd.rs  lib.rs
fighters/lucario/: Cargo.toml
fighters/lucario/src/: acmd.rs  agent_init.rs  fgc.rs  frame.rs  helper.rs  lib.rs  status.rs
fighters/lucas/: Cargo.toml
fighters/lucas/src/: acmd.rs  lib.rs  status.rs
fighters/lucina/: Cargo.toml
fighters/lucina/src/: acmd.rs  agent_init.rs  cancel.rs  frame.rs  helper.rs  lib.rs  status.rs  vl.rs
fighters/luigi/: Cargo.toml
fighters/mario/: Cargo.toml
fighters/mariod/: Cargo.toml
fighters/marth/: Cargo.toml
fighters/master/: Cargo.toml
fighters/metaknight/: Cargo.toml
fighters/mewtwo/: Cargo.toml
fighters/miifighter/: Cargo.toml
fighters/miigunner/: Cargo.toml
fighters/miiswordsman/: Cargo.toml
fighters/murabito/: Cargo.toml
fighters/ness/: Cargo.toml
fighters/packun/: Cargo.toml
fighters/pacman/: Cargo.toml
fighters/palutena/: Cargo.toml
fighters/peach/: Cargo.toml
fighters/pfushigisou/: Cargo.toml
fighters/pichu/: Cargo.toml
fighters/pickel/: Cargo.toml
fighters/pikachu/: Cargo.toml
fighters/pikmin/: Cargo.toml
fighters/pit/: Cargo.toml
fighters/pitb/: Cargo.toml
fighters/plizardon/: Cargo.toml
fighters/purin/: Cargo.toml
fighters/pzenigame/: Cargo.toml
fighters/reflet/: Cargo.toml
fighters/richter/: Cargo.toml
fighters/ridley/: Cargo.toml
fighters/robot/: Cargo.toml
fighters/rockman/: Cargo.toml
fighters/rosetta/: Cargo.toml
fighters/roy/: Cargo.toml
fighters/ryu/: Cargo.toml
fighters/samus/: Cargo.toml
fighters/samusd/: Cargo.toml
fighters/sheik/: Cargo.toml
fighters/shizue/: Cargo.toml
fighters/shulk/: Cargo.toml
fighters/simon/: Cargo.toml
fighters/snake/: Cargo.toml
fighters/sonic/: Cargo.toml
fighters/szerosuit/: Cargo.toml
fighters/tantan/: Cargo.toml
fighters/template/: Cargo.toml
fighters/toonlink/: Cargo.toml
fighters/trail/: Cargo.toml
fighters/wario/: Cargo.toml
fighters/wiifit/: Cargo.toml
fighters/wolf/: Cargo.toml
fighters/yoshi/: Cargo.toml
fighters/younglink/: Cargo.toml
fighters/zelda/: Cargo.toml
wubor_utils/: Cargo.toml
wubor_utils/src/: cancels.rs  vars.rs  wua_bind.rs
(+3693 files in other folders)
