[package]
name = "wubor"
version = "0.15.0"
authors = ["WuBoy and Bor"]
edition = "2018"

[package.metadata.skyline]
titleid = "01006A800016E000"

[lib]
crate-type = ["cdylib"]

[dependencies]
skyline = "0.2.1"
# skyline_smash = { git = "https://github.com/blu-dev/skyline-smash.git", features = ["weak_l2cvalue"] }
# smash_script = { git = "https://github.com/blu-dev/smash-script.git", branch = "development" }
# smashline = { git = "https://github.com/blu-dev/smashline.git", branch = "development" }
# wubor_utils = { path = "./WuBor-Utils" }
# custom_status = { path = "./custom-status" }
# custom_var = { path = "./custom-var" }
# custom_cancel = { path = "./custom-cancel" }
# smash_rs = { package = "smash", git = "https://github.com/blu-dev/smash-rs" }
# libc-nnsdk = "0.2.0"

[features]
pr = []
dev = []

[profile.dev]
panic = "abort"

[profile.release]
opt-level = 'z'
panic = "abort"
lto = true
codegen-units = 1
