[package]
name = "wubor"
version = "0.17.0"
authors = ["WuBoy and Bor"]
edition = "2018"

[package.metadata.skyline]
titleid = "01006A800016E000"

[lib]
crate-type = ["cdylib"]

[dependencies]
skyline = "0.2.1"
skyline_smash = { git = "https://github.com/blu-dev/skyline-smash.git", features = ["weak_l2cvalue"] }
smash_script = { git = "https://github.com/blu-dev/smash-script.git", branch = "development" }
# smashline = { git = "https://github.com/HDR-Development/smashline" }
smashline = { path = "../smashline/crates/smashline" }
wubor_utils = { path = "./WuBor-Utils" }
custom_var = { path = "./custom-var" }
custom_cancel = { path = "./custom-cancel" }
smash_singletons = { git = "https://github.com/WuBoytH/smash_singletons.git" }
smash_rs = { package = "smash", git = "https://github.com/blu-dev/smash-rs" }
libc-nnsdk = "0.2.0"
ninput = { git = "https://github.com/blu-dev/ninput", version = "0.1.0" }

[patch.crates-io]
skyline = { git = "https://github.com/ultimate-research/skyline-rs.git" }

[features]
default = [ "local" ]
local = []
pr = []
dev = []

[profile.dev]
panic = "abort"

[profile.release]
opt-level = 'z'
panic = "abort"
lto = true
codegen-units = 1
