[package]
name = "wubor_utils"
version = "1.1.0"
edition = "2018"

[dependencies]
skyline = { git = "https://github.com/ultimate-research/skyline-rs.git" }
skyline_smash = { git = "https://github.com/blu-dev/skyline-smash.git", features = ["weak_l2cvalue"] }
smash_script = { git = "https://github.com/blu-dev/smash-script.git", branch = "development" }
custom_var = { path = "../custom-var" }
