[package]
name = "wubor_utils"
version = "1.1.0"
edition = "2018"

[dependencies]
skyline = "0.2.1"
skyline_smash = { git = "https://github.com/blu-dev/skyline-smash.git", features = ["weak_l2cvalue"] }
smash_script = { git = "https://github.com/blu-dev/smash-script.git", branch = "development" }
custom_var = { path = "../custom-var" }
smash_singletons = { git = "https://github.com/WuBoytH/smash_singletons.git" }
bitflags = "2"
modular-bitfield = "0.11.2"