[package]
name = "custom_cancel"
version = "2.0.0"
edition = "2021"

[dependencies]
# skyline = "0.2.1"
skyline_smash = { git = "https://github.com/blu-dev/skyline-smash.git", features = ["weak_l2cvalue"] }
lazy_static = "1.4.0"
parking_lot = "0.11.2"
wubor_utils = { path = "../WuBor-Utils" }
custom_var = { path = "../custom-var" }
bitflags = "1.3.2"
