[package]
name = "custom_status"
version = "0.13.0"
edition = "2018"

[dependencies]
skyline = { git = "https://github.com/ultimate-research/skyline-rs.git" }
skyline_smash = { git = "https://github.com/blu-dev/skyline-smash.git", features = ["weak_l2cvalue"] }
lazy_static = "1.4.0"
parking_lot = "0.11.2"
