[package]
name = "fighters"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common       = { path = "./common" }
bayonetta    = { path = "./bayonetta",    optional = true }
belmont      = { path = "./belmont",      optional = true }
brave        = { path = "./brave",        optional = true }
buddy        = { path = "./buddy",        optional = true }
captain      = { path = "./captain",      optional = true }
chrom        = { path = "./chrom",        optional = true }
cloud        = { path = "./cloud",        optional = true }
daisy        = { path = "./daisy",        optional = true }
dedede       = { path = "./dedede",       optional = true }
demon        = { path = "./demon",        optional = true }
diddy        = { path = "./diddy",        optional = true }
dolly        = { path = "./dolly",        optional = true }
donkey       = { path = "./donkey",       optional = true }
duckhunt     = { path = "./duckhunt",     optional = true }
edge         = { path = "./edge",         optional = true }
eflame       = { path = "./eflame",       optional = true }
element      = { path = "./element",      optional = true }
elight       = { path = "./elight",       optional = true }
falco        = { path = "./falco",        optional = true }
fox          = { path = "./fox",          optional = true }
gamewatch    = { path = "./gamewatch",    optional = true }
ganon        = { path = "./ganon",        optional = true }
gaogaen      = { path = "./gaogaen",      optional = true }
gekkouga     = { path = "./gekkouga",     optional = true }
iceclimber   = { path = "./iceclimber",   optional = true }
ike          = { path = "./ike",          optional = true }
inkling      = { path = "./inkling",      optional = true }
jack         = { path = "./jack",         optional = true }
kamui        = { path = "./kamui",        optional = true }
ken          = { path = "./ken",          optional = true }
kirby        = { path = "./kirby",        optional = true }
koopa        = { path = "./koopa",        optional = true }
koopajr      = { path = "./koopajr",      optional = true }
krool        = { path = "./krool",        optional = true }
link         = { path = "./link",         optional = true }
littlemac    = { path = "./littlemac",    optional = true }
lucario      = { path = "./lucario",      optional = true }
lucas        = { path = "./lucas",        optional = true }
lucina       = { path = "./lucina",       optional = true }
luigi        = { path = "./luigi",        optional = true }
mario        = { path = "./mario",        optional = true }
mariod       = { path = "./mariod",       optional = true }
marth        = { path = "./marth",        optional = true }
master       = { path = "./master",       optional = true }
metaknight   = { path = "./metaknight",   optional = true }
mewtwo       = { path = "./mewtwo",       optional = true }
miifighter   = { path = "./miifighter",   optional = true }
miigunner    = { path = "./miigunner",    optional = true }
miiswordsman = { path = "./miiswordsman", optional = true }
murabito     = { path = "./murabito",     optional = true }
ness         = { path = "./ness",         optional = true }
packun       = { path = "./packun",       optional = true }
pacman       = { path = "./pacman",       optional = true }
palutena     = { path = "./palutena",     optional = true }
peach        = { path = "./peach",        optional = true }
pfushigisou  = { path = "./pfushigisou",  optional = true }
pichu        = { path = "./pichu",        optional = true }
pickel       = { path = "./pickel",       optional = true }
pikachu      = { path = "./pikachu",      optional = true }
pikmin       = { path = "./pikmin",       optional = true }
pit          = { path = "./pit",          optional = true }
pitb         = { path = "./pitb",         optional = true }
plizardon    = { path = "./plizardon",    optional = true }
purin        = { path = "./purin",        optional = true }
pzenigame    = { path = "./pzenigame",    optional = true }
reflet       = { path = "./reflet",       optional = true }
richter      = { path = "./richter",      optional = true }
ridley       = { path = "./ridley",       optional = true }
robot        = { path = "./robot",        optional = true }
rockman      = { path = "./rockman",      optional = true }
rosetta      = { path = "./rosetta",      optional = true }
roy          = { path = "./roy",          optional = true }
ryu          = { path = "./ryu",          optional = true }
samus        = { path = "./samus",        optional = true }
samusd       = { path = "./samusd",       optional = true }
sheik        = { path = "./sheik",        optional = true }
shizue       = { path = "./shizue",       optional = true }
shulk        = { path = "./shulk",        optional = true }
simon        = { path = "./simon",        optional = true }
snake        = { path = "./snake",        optional = true }
sonic        = { path = "./sonic",        optional = true }
szerosuit    = { path = "./szerosuit",    optional = true }
tantan       = { path = "./tantan",       optional = true }
toonlink     = { path = "./toonlink",     optional = true }
trail        = { path = "./trail",        optional = true }
wario        = { path = "./wario",        optional = true }
wiifit       = { path = "./wiifit",       optional = true }
wolf         = { path = "./wolf",         optional = true }
yoshi        = { path = "./yoshi",        optional = true }
younglink    = { path = "./younglink",    optional = true }
zelda        = { path = "./zelda",        optional = true }

[features]
ignore-common        = []
include-bayonetta    = ["bayonetta"]
include-brave        = ["brave"]
include-buddy        = ["buddy"]
include-captain      = ["captain"]
include-chrom        = ["chrom"]
include-cloud        = ["cloud"]
include-daisy        = ["daisy"]
include-dedede       = ["dedede"]
include-demon        = ["demon"]
include-diddy        = ["diddy"]
include-dolly        = ["dolly"]
include-donkey       = ["donkey"]
include-duckhunt     = ["duckhunt"]
include-edge         = ["edge"]
include-eflame       = ["eflame"]
include-elight       = ["elight"]
include-falco        = ["falco"]
include-fox          = ["fox"]
include-gamewatch    = ["gamewatch"]
include-ganon        = ["ganon"]
include-gaogaen      = ["gaogaen"]
include-gekkouga     = ["gekkouga"]
include-iceclimber   = ["iceclimber"]
include-ike          = ["ike"]
include-inkling      = ["inkling"]
include-jack         = ["jack"]
include-kamui        = ["kamui"]
include-ken          = ["ken"]
include-kirby        = ["kirby"]
include-koopa        = ["koopa"]
include-koopajr      = ["koopajr"]
include-krool        = ["krool"]
include-link         = ["link"]
include-littlemac    = ["littlemac"]
include-lucario      = ["lucario"]
include-lucas        = ["lucas"]
include-lucina       = ["lucina"]
include-luigi        = ["luigi"]
include-mario        = ["mario"]
include-mariod       = ["mariod"]
include-marth        = ["marth"]
include-master       = ["master"]
include-metaknight   = ["metaknight"]
include-mewtwo       = ["mewtwo"]
include-miifighter   = ["miifighter"]
include-miigunner    = ["miigunner"]
include-miiswordsman = ["miiswordsman"]
include-murabito     = ["murabito"]
include-ness         = ["ness"]
include-packun       = ["packun"]
include-pacman       = ["pacman"]
include-palutena     = ["palutena"]
include-peach        = ["peach"]
include-pfushigisou  = ["pfushigisou"]
include-pichu        = ["pichu"]
include-pickel       = ["pickel"]
include-pikachu      = ["pikachu"]
include-pikmin       = ["pikmin"]
include-pit          = ["pit"]
include-pitb         = ["pitb"]
include-plizardon    = ["plizardon"]
include-purin        = ["purin"]
include-pzenigame    = ["pzenigame"]
include-reflet       = ["reflet"]
include-richter      = ["richter"]
include-ridley       = ["ridley"]
include-robot        = ["robot"]
include-rockman      = ["rockman"]
include-rosetta      = ["rosetta"]
include-roy          = ["roy"]
include-ryu          = ["ryu"]
include-samus        = ["samus"]
include-samusd       = ["samusd"]
include-sheik        = ["sheik"]
include-shizue       = ["shizue"]
include-shulk        = ["shulk"]
include-simon        = ["simon"]
include-snake        = ["snake"]
include-sonic        = ["sonic"]
include-szerosuit    = ["szerosuit"]
include-tantan       = ["tantan"]
include-toonlink     = ["toonlink"]
include-trail        = ["trail"]
include-wario        = ["wario"]
include-wiifit       = ["wiifit"]
include-wolf         = ["wolf"]
include-yoshi        = ["yoshi"]
include-younglink    = ["younglink"]
include-zelda        = ["zelda"]