[package]
name = "wubor_utils"
version = "0.13.0"
edition = "2018"

[dependencies]
skyline = { git = "https://github.com/ultimate-research/skyline-rs.git" }
skyline_smash = { git = "https://github.com/blu-dev/skyline-smash.git", features = ["weak_l2cvalue"] }
smash_script = { git = "https://github.com/blu-dev/smash-script.git", branch = "development" }
smashline = { git = "https://github.com/blu-dev/smashline.git", branch = "development" }

