[package]
name = "roy"
version = "0.1.0"
edition = "2021"

[dependencies]
skyline = { git = "https://github.com/ultimate-research/skyline-rs" }
skyline_smash = { git = "https://github.com/blu-dev/skyline-smash.git", features = ["weak_l2cvalue"] }
smash_script = { git = "https://github.com/blu-dev/smash-script.git", branch = "development" }
smashline = { git = "https://github.com/HDR-Development/smashline" }
wubor_utils = { path = "../../WuBor-Utils" }
custom_var = { path = "../../custom-var" }
custom_cancel = { path = "../../custom-cancel" }
smash_singletons = { git = "https://github.com/WuBoytH/smash_singletons.git" }
smash_rs = { package = "smash", git = "https://github.com/blu-dev/smash-rs" }